--- a/examples/with-formik/package.json
+++ b/examples/with-formik/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "formengine",
-  "version": "1.11.0",
-  "description": "Example application",
+  "name": "with-formik",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@react-form-builder/components-rsuite": "^1.11.0",
@@ -11,18 +10,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.58",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "@types/node": "^16.18.107",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "formik": "^2.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
