--- a/examples/file-upload-server/package.json
+++ b/examples/file-upload-server/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Optimajet",
+  "homepage": "https://formengine.io/",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
