--- a/examples/with-formik/package.json
+++ b/examples/with-formik/package.json
@@ -2,10 +2,12 @@
   "name": "with-formik",
   "version": "0.1.0",
   "private": true,
+  "author": "Optimajet",
+  "homepage": "https://formengine.io/",
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^3.6.0",
-    "@react-form-builder/core": "^3.6.0",
-    "@react-form-builder/designer": "^3.6.0",
+    "@react-form-builder/components-rsuite": "^4.0.0",
+    "@react-form-builder/core": "^4.0.0",
+    "@react-form-builder/designer": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
