--- a/examples/file-upload-server/package.json
+++ b/examples/file-upload-server/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^2.0.0"
   }
 }
