--- a/community/src/packages/apps/example-viewer/package.json
+++ b/community/src/packages/apps/example-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-form-builder/example-viewer",
-  "version": "6.1.0",
+  "version": "6.2.0",
   "license": "MIT",
   "private": true,
   "main": "src/index.tsx",
@@ -21,13 +21,14 @@
     "dev": "vite -c ../../../vite.config.ts --host"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^6.1.0",
-    "@react-form-builder/core": "^6.1.0",
+    "@react-form-builder/components-rsuite": "^6.2.0",
+    "@react-form-builder/core": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.83",
-    "@types/react-dom": "^17.0.26"
+    "@types/react-dom": "^17.0.26",
+    "@welldone-software/why-did-you-render": "^7.0.1"
   }
 }
