--- a/community/src/packages/apps/example-viewer/package.json
+++ b/community/src/packages/apps/example-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-form-builder/example-viewer",
-  "version": "7.2.0",
+  "version": "7.3.0",
   "license": "MIT",
   "private": true,
   "main": "src/index.tsx",
@@ -17,18 +17,20 @@
   },
   "scripts": {
     "build": "vite build",
-    "start": "vite -c ../../../vite.config.ts --open --host",
-    "dev": "vite -c ../../../vite.config.ts --host"
+    "start": "vite --open --host",
+    "dev": "vite --host",
+    "bundle-size": "npx vite-bundle-visualizer"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.2.0",
-    "@react-form-builder/core": "^7.2.0",
+    "@react-form-builder/components-rsuite": "^7.3.0",
+    "@react-form-builder/core": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.26",
-    "@welldone-software/why-did-you-render": "^7.0.1"
+    "@welldone-software/why-did-you-render": "^7.0.1",
+    "vite-bundle-visualizer": "^1.2.1"
   }
 }
