--- a/community/src/packages/core/package.json
+++ b/community/src/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/core",
   "description": "React hook form alternative.",
-  "version": "7.2.0",
+  "version": "7.3.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -12,6 +12,7 @@
   },
   "main": "src/index.ts",
   "type": "module",
+  "sideEffects": false,
   "keywords": [
     "react",
     "form",
