--- a/community/src/packages/viewer-bundle/package.json
+++ b/community/src/packages/viewer-bundle/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/viewer-bundle",
   "description": "Optimajet Form Builder Develop front-end drag n drop forms with ease.",
-  "version": "7.2.0",
+  "version": "7.3.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -19,6 +19,7 @@
   "bugs": {
     "email": "support@optimajet.com"
   },
+  "sideEffects": false,
   "scripts": {
     "build": "vite build",
     "clean": "rimraf dist temp",
@@ -26,8 +27,8 @@
     "create-archive": "node ./config/pack"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.2.0",
-    "@react-form-builder/core": "^7.2.0",
+    "@react-form-builder/components-rsuite": "^7.3.0",
+    "@react-form-builder/core": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0"
