--- a/community/src/packages/views/rsuite/package.json
+++ b/community/src/packages/views/rsuite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/components-rsuite",
   "description": "OptimaJet Form Builder Components - RSuite",
-  "version": "7.2.0",
+  "version": "7.3.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -12,6 +12,7 @@
   },
   "main": "src/index.ts",
   "type": "module",
+  "sideEffects": false,
   "bugs": {
     "email": "support@optimajet.com"
   },
@@ -22,7 +23,7 @@
     "create-archive": "node ./config/pack"
   },
   "dependencies": {
-    "@react-form-builder/core": "^7.2.0"
+    "@react-form-builder/core": "^7.3.0"
   },
   "peerDependencies": {
     "@emotion/css": "^11.13.5",
