--- a/community/src/packages/views/rsuite/package.json
+++ b/community/src/packages/views/rsuite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/components-rsuite",
   "description": "OptimaJet Form Builder Components - RSuite",
-  "version": "7.5.0",
+  "version": "7.6.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -22,18 +22,21 @@
     "bundle": "npm-run-all -l clean build create-archive",
     "create-archive": "node ./config/pack"
   },
-  "dependencies": {
-    "@react-form-builder/core": "^7.5.0"
-  },
   "peerDependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@react-form-builder/core": "7.6.0",
     "@rsuite/icons": "1.3.2",
     "date-fns": "^2.30.0",
     "react": ">=17.0.2 || ^18 || ^19",
     "react-number-format": "^5.1.4",
     "rsuite": "5.83.3"
+  },
+  "peerDependenciesMeta": {
+    "@react-form-builder/core": {
+      "optional": false
+    }
   },
   "files": [
     "dist/*",
