--- a/community/src/nx.json
+++ b/community/src/nx.json
@@ -3,19 +3,28 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "test"]
+        "cacheableOperations": [
+          "build",
+          "test"
+        ]
       }
     }
   },
   "targetDefaults": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": [
+        "^build"
+      ]
     },
     "start": {
-      "dependsOn": ["^start"]
+      "dependsOn": [
+        "^start"
+      ]
     },
     "bundle": {
-      "dependsOn": ["^bundle"]
+      "dependsOn": [
+        "^bundle"
+      ]
     }
   }
 }
