--- a/community/examples/file-upload-server/package.json
+++ b/community/examples/file-upload-server/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "main": "server.js",
   "scripts": {
