--- a/community/src/nx.json
+++ b/community/src/nx.json
@@ -21,9 +21,9 @@
         "^start"
       ]
     },
-    "bundle": {
+    "pack": {
       "dependsOn": [
-        "^bundle"
+        "^pack"
       ]
     }
   }
