--- a/community/examples/formdata/package.json
+++ b/community/examples/formdata/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "type": "module",
   "scripts": {
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
-    "@react-form-builder/components-rsuite": "^7.7.0",
-    "@react-form-builder/core": "^7.7.0",
+    "@react-form-builder/components-rsuite": "^7.8.0",
+    "@react-form-builder/core": "^7.8.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
