--- a/community/src/packages/apps/example-viewer/package.json
+++ b/community/src/packages/apps/example-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-form-builder/example-viewer",
-  "version": "7.7.0",
+  "version": "7.8.0",
   "license": "MIT",
   "private": true,
   "main": "src/index.tsx",
@@ -10,7 +10,7 @@
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "bugs": {
     "email": "support@optimajet.com"
@@ -22,8 +22,8 @@
     "bundle-size": "npx vite-bundle-visualizer"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.7.0",
-    "@react-form-builder/core": "^7.7.0",
+    "@react-form-builder/components-rsuite": "^7.8.0",
+    "@react-form-builder/core": "^7.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
