--- a/community/src/packages/core/package.json
+++ b/community/src/packages/core/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@react-form-builder/core",
   "description": "React JSON Schema Form Builder to create complex, validated, reusable forms with no deep React knowledge required",
-  "version": "7.7.0",
+  "version": "7.8.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "main": "src/index.ts",
   "type": "module",
@@ -41,7 +41,7 @@
   "scripts": {
     "build": "vite build",
     "clean": "rimraf dist temp",
-    "bundle": "npm-run-all -l clean build create-archive",
+    "pack": "npm-run-all -l clean build create-archive",
     "create-archive": "node ./config/pack"
   },
   "dependencies": {
