--- a/community/src/packages/viewer-bundle/package.json
+++ b/community/src/packages/viewer-bundle/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@react-form-builder/viewer-bundle",
   "description": "Optimajet Form Builder Develop front-end drag n drop forms with ease.",
-  "version": "7.7.0",
+  "version": "7.8.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "main": "src/index.ts",
   "type": "module",
@@ -23,17 +23,17 @@
   "scripts": {
     "build": "vite build",
     "clean": "rimraf dist temp",
-    "bundle": "npm-run-all -l clean build create-archive",
+    "pack": "npm-run-all -l clean build create-archive",
     "create-archive": "node ./config/pack"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.7.0",
+    "@react-form-builder/components-rsuite": "^7.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0"
   },
   "peerDependencies": {
-    "@react-form-builder/core": "7.7.0"
+    "@react-form-builder/core": "7.8.0"
   },
   "peerDependenciesMeta": {
     "@react-form-builder/core": {
