--- a/community/src/packages/views/rsuite/package.json
+++ b/community/src/packages/views/rsuite/package.json
@@ -1,37 +1,175 @@
 {
   "name": "@react-form-builder/components-rsuite",
   "description": "OptimaJet Form Builder Components - RSuite",
-  "version": "7.7.0",
+  "version": "7.8.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "main": "src/index.ts",
   "type": "module",
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./src/index.ts"
+    },
+    "./css-loader": {
+      "import": "./src/cssLoader.ts"
+    },
+    "./view": {
+      "import": "./src/view.ts"
+    },
+    "./view-with-css": {
+      "import": "./src/viewWithCss.ts"
+    },
+    "./builder-view-with-css": {
+      "import": "./src/builderViewWithCss.ts"
+    },
+    "./r-suite-components": {
+      "import": "./src/rSuiteComponents.ts"
+    },
+    "./models": {
+      "import": "./src/models.ts"
+    },
+    "./definitions": {
+      "import": "./src/definitions.ts"
+    },
+    "./autocomplete": {
+      "import": "./src/components/RsAutocomplete.tsx"
+    },
+    "./breadcrumb": {
+      "import": "./src/components/RsBreadcrumb.tsx"
+    },
+    "./button": {
+      "import": "./src/components/RsButton.tsx"
+    },
+    "./calendar": {
+      "import": "./src/components/RsCalendar.tsx"
+    },
+    "./card": {
+      "import": "./src/components/RsCard.tsx"
+    },
+    "./checkbox": {
+      "import": "./src/components/RsCheckbox.tsx"
+    },
+    "./container": {
+      "import": "./src/components/RsContainer.tsx"
+    },
+    "./date-picker": {
+      "import": "./src/components/RsDatePicker.tsx"
+    },
+    "./divider": {
+      "import": "./src/components/RsDivider.tsx"
+    },
+    "./dropdown": {
+      "import": "./src/components/RsDropdown.tsx"
+    },
+    "./error-message": {
+      "import": "./src/components/RsErrorMessage.tsx"
+    },
+    "./header": {
+      "import": "./src/components/RsHeader.tsx"
+    },
+    "./image": {
+      "import": "./src/components/RsImage.tsx"
+    },
+    "./input": {
+      "import": "./src/components/RsInput.tsx"
+    },
+    "./label": {
+      "import": "./src/components/RsLabel.tsx"
+    },
+    "./link": {
+      "import": "./src/components/RsLink.tsx"
+    },
+    "./localization-wrapper": {
+      "import": "./src/components/RsLocalizationWrapper.tsx"
+    },
+    "./menu": {
+      "import": "./src/components/RsMenu.tsx"
+    },
+    "./message": {
+      "import": "./src/components/RsMessage.tsx"
+    },
+    "./modal": {
+      "import": "./src/components/RsModal.tsx"
+    },
+    "./modal-layout": {
+      "import": "./src/components/RsModalLayout.tsx"
+    },
+    "./number-format": {
+      "import": "./src/components/RsNumberFormat.tsx"
+    },
+    "./pattern-format": {
+      "import": "./src/components/RsPatternFormat.tsx"
+    },
+    "./placeholder": {
+      "import": "./src/components/RsPlaceholder.tsx"
+    },
+    "./progress": {
+      "import": "./src/components/RsProgress.tsx"
+    },
+    "./radio-group": {
+      "import": "./src/components/RsRadioGroup.tsx"
+    },
+    "./search": {
+      "import": "./src/components/RsSearch.tsx"
+    },
+    "./static-content": {
+      "import": "./src/components/RsStaticContent.tsx"
+    },
+    "./tab": {
+      "import": "./src/components/RsTab.tsx"
+    },
+    "./tag-picker": {
+      "import": "./src/components/RsTagPicker.tsx"
+    },
+    "./text-area": {
+      "import": "./src/components/RsTextArea.tsx"
+    },
+    "./time-picker": {
+      "import": "./src/components/RsTimePicker.tsx"
+    },
+    "./toggle": {
+      "import": "./src/components/RsToggle.tsx"
+    },
+    "./tooltip": {
+      "import": "./src/components/RsTooltip.tsx"
+    },
+    "./uploader": {
+      "import": "./src/components/RsUploader.tsx"
+    },
+    "./wizard": {
+      "import": "./src/components/RsWizard.tsx"
+    },
+    "./components-descriptions": {
+      "import": "./src/i18n/rSuiteComponentsDescriptions.ts"
+    }
+  },
   "bugs": {
     "email": "support@optimajet.com"
   },
   "scripts": {
     "build": "vite build",
+    "check:dist": "node ./config/check-pack.ts",
     "clean": "rimraf dist temp",
-    "bundle": "npm-run-all -l clean build create-archive",
-    "create-archive": "node ./config/pack"
+    "pack": "npm-run-all -l clean build create-archive",
+    "create-archive": "node ./config/pack.ts"
   },
   "peerDependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@react-form-builder/core": "7.7.0",
+    "@react-form-builder/core": "7.8.0",
     "@rsuite/icons": "1.3.2",
     "date-fns": "^2.30.0",
     "react": ">=17.0.2 || ^18 || ^19",
     "react-number-format": "^5.1.4",
-    "rsuite": "5.83.3"
+    "rsuite": "5.83.4"
   },
   "peerDependenciesMeta": {
     "@react-form-builder/core": {
