--- a/premium/examples/with-formik/package.json
+++ b/premium/examples/with-formik/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "type": "module",
   "scripts": {
@@ -17,9 +17,9 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.7.0",
-    "@react-form-builder/core": "^7.7.0",
-    "@react-form-builder/designer": "^7.7.0",
+    "@react-form-builder/components-rsuite": "^7.8.0",
+    "@react-form-builder/core": "^7.8.0",
+    "@react-form-builder/designer": "^7.8.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "formik": "^2.4.6",
     "react": "^19.0.0",
