--- a/premium/examples/with-remix/with-remix-v2/package.json
+++ b/premium/examples/with-remix/with-remix-v2/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://formengine.io/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:optimajet/formengine.git"
+    "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
   "sideEffects": false,
   "type": "module",
@@ -20,9 +20,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@react-form-builder/components-rsuite": "^7.7.0",
-    "@react-form-builder/core": "^7.7.0",
-    "@react-form-builder/designer": "^7.7.0",
+    "@react-form-builder/components-rsuite": "^7.8.0",
+    "@react-form-builder/core": "^7.8.0",
+    "@react-form-builder/designer": "^7.8.0",
     "@remix-run/node": "^2.14.0",
     "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.16.4",
