--- a/community/src/.eslintignore
+++ b/community/src/.eslintignore
@@ -2,16 +2,8 @@ vite.config.ts
 vite.ssl.config.ts
 types
 **/dist
-BuildScripts
 documentation
-examples
-scripts/*.js
-scripts/test/**/*
-packages/apps/demo/scripts
-packages/apps/formbuilder/scripts
-packages/designer/scripts
-packages/views/default
-sample-apps
+scripts
 pack.js
 tests
-tools
+*.d.ts
