--- a/community/src/package.json
+++ b/community/src/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "bootstrap": "npx lerna bootstrap",
     "start": "npx lerna run dev --scope=@react-form-builder/example-viewer",
     "build": "npx lerna run build",
     "pack": "npx lerna run pack",
@@ -20,28 +19,28 @@
   "devDependencies": {
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "eslint": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "@vitest/browser-playwright": "^4.0.15",
+    "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "lerna": "^5.6.2",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "lerna": "^9.0.1",
     "npm-run-all": "^4.1.5",
-    "nx": "^14.7.17",
     "rimraf": "^5.0.0",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.23",
-    "typescript": "^5.0.3",
-    "vite": "^4.5.9",
-    "vite-bundle-analyzer": "^0.10.3",
-    "vite-plugin-cp": "^4.0.8",
-    "vite-plugin-dts": "^3.6.1",
-    "vite-plugin-svgr": "^4.3.0",
-    "vitest": "^2.1.8"
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.24",
+    "typescript": "5.8.3",
+    "vite": "^7.2.2",
+    "vite-bundle-analyzer": "^1.2.3",
+    "vite-plugin-cp": "^6.0.3",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-svgr": "^4.5.0",
+    "vitest": "^4.0.9"
   },
   "dependencies": {
     "react": "^19.0.0",
