--- a/community/src/packages/core/bundle.tsconfig.json
+++ b/community/src/packages/core/bundle.tsconfig.json
@@ -5,6 +5,8 @@
     "rootDir": "./"
   },
   "exclude": [
-    "./vite.config.ts"
+    "./vite.config.ts",
+    "./config/**/*",
+    "scripts"
   ]
 }
