--- a/community/src/packages/core/package.json
+++ b/community/src/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/core",
   "description": "React JSON Schema Form Builder to create complex, validated, reusable forms with no deep React knowledge required",
-  "version": "7.8.0",
+  "version": "7.9.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -10,9 +10,6 @@
     "type": "git",
     "url": "git+ssh://git@github.com/optimajet/formengine.git"
   },
-  "main": "src/index.ts",
-  "type": "module",
-  "sideEffects": false,
   "keywords": [
     "react",
     "form",
@@ -38,11 +35,25 @@
   "bugs": {
     "email": "support@optimajet.com"
   },
+  "main": "src/index.ts",
+  "type": "module",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./src/index.ts"
+    },
+    "./lite": {
+      "import": "./src/index-lite.ts"
+    },
+    "./package.json": "./package.json",
+    "./schemas/persisted-form.schema.json": "./public/schemas/persisted-form.schema.json"
+  },
   "scripts": {
     "build": "vite build",
     "clean": "rimraf dist temp",
-    "pack": "npm-run-all -l clean build create-archive",
-    "create-archive": "node ./config/pack"
+    "pack": "npm-run-all -l clean build create-json-schema create-archive",
+    "create-archive": "node ./config/pack.ts",
+    "create-json-schema": "vite-node scripts/json-schema/generator.ts"
   },
   "dependencies": {
     "@fluent/bundle": "^0.19.1",
@@ -55,6 +66,10 @@
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
     "react": ">=17.0.2 || ^18 || ^19"
+  },
+  "devDependencies": {
+    "ts-json-schema-generator": "^2.4.0",
+    "vite-node": "^5.2.0"
   },
   "browserslist": {
     "production": [
@@ -69,9 +84,8 @@
     ]
   },
   "files": [
-    "dist/index.js.map",
-    "dist/index.js",
-    "dist/index.d.ts",
+    "dist/",
+    "package.json",
     "README.md",
     "LICENSE"
   ]
