--- a/community/src/lerna.json
+++ b/community/src/lerna.json
@@ -1,6 +1,12 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useNx": true,
-  "useWorkspaces": true,
-  "version": "7.8.0"
+  "useNx": false,
+  "packages": [
+    "packages/*",
+    "packages/apps/*",
+    "packages/views/*",
+    "documentation/website",
+    "tests/*"
+  ],
+  "version": "7.9.0"
 }
