--- a/community/src/packages/views/rsuite/package.json
+++ b/community/src/packages/views/rsuite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-form-builder/components-rsuite",
   "description": "OptimaJet Form Builder Components - RSuite",
-  "version": "7.8.0",
+  "version": "7.9.0",
   "license": "MIT",
   "private": false,
   "author": "Optimajet",
@@ -163,8 +163,8 @@
   "peerDependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@react-form-builder/core": "7.8.0",
+    "@emotion/styled": "^11.14.1",
+    "@react-form-builder/core": "7.9.0",
     "@rsuite/icons": "1.3.2",
     "date-fns": "^2.30.0",
     "react": ">=17.0.2 || ^18 || ^19",
@@ -180,5 +180,8 @@
     "dist/*",
     "README.md",
     "LICENSE"
-  ]
+  ],
+  "devDependencies": {
+    "vite-inline-css-plugin": "^0.0.1"
+  }
 }
